--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 		</div><!--content-->
 		<footer>
 			<ul class="nav">
-				<li><a href="index.html">主页</a></li>
+				<li class="active"><a href="index.html">主页</a></li>
 				<li><a href="#">社区</a></li>
 				<li><a href="#">衣柜</a></li>
 				<li><a href="#">推荐</a></li>
