--- a/templates/index.html
+++ b/templates/index.html
@@ -35,7 +35,7 @@
 				<li class="active"><a href="index.html">主页</a></li>
 				<li><a href="#">社区</a></li>
 				<li><a href="#">衣柜</a></li>
-				<li><a href="#">推荐</a></li>
+				<li><a href="recommend.html">推荐</a></li>
 			</ul>
 		</footer>
 	</div><!--container-->
