导航栏调节

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 		<footer>
 			<ul class="nav">
 				<li class="active"><a href="index.html">主页</a></li>
-				<li><a href="#">社区</a></li>
+				<li><a href="bbs.html">社区</a></li>
 				<li><a href="#">衣柜</a></li>
 				<li><a href="recommend.html">推荐</a></li>
 			</ul>
