--- a/templates/recommend.html
+++ b/templates/recommend.html
@@ -20,7 +20,7 @@
 		<footer>
 			<ul class="nav">
 				<li><a href="index.html">主页</a></li>
-				<li><a href="#">社区</a></li>
+				<li><a href="bbs.html">社区</a></li>
 				<li><a href="#">衣柜</a></li>
 				<li class="active"><a href="recommend.html">推荐</a></li>
 			</ul>
